--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
         <h1>Belly Button Biodiversity Dashboard</h1>
-        <p>Use the interactive charts below to explore the dataset</p>
+        <p class="text-primary">Use the interactive charts below to explore the dataset</p>
+        <img src="images/belly button.jpg" class="rounded" alt="Cinque Terre" width="304" height="300">
       </div>
     </div>
     <div class="row">
@@ -25,7 +26,7 @@
           <!-- <select id="selDataset"></select> -->
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
-        <div class="panel panel-primary">
+        <div class="panel panel-success">
           <div class="panel-heading">
             <h3 class="panel-title">Demographic Info</h3>
           </div>
